--- a/src/app/components/lost-items.component.html
+++ b/src/app/components/lost-items.component.html
@@ -1,8 +1,20 @@
-<h3>This is lost</h3>
+<h3>This is all currently lost items</h3>
+
 <ul class="items">
-    <li *ngFor="let item of items" (click)="onSelect(item)"
-        [class.selected]="item === selectedItem">
-      <span class="badge">{{item.id}}</span>
-      <span>{{item.name}}</span>
-    </li>
-  </ul>
+  <li *ngFor="let item of items" (click)="onSelect(item)" [class.selected]="item === selectedItem">
+    <span class="badge">{{item.id}}</span>
+    <span>{{item.name}}</span>
+    <span>{{item.lostDate}}</span>
+  </li>
+</ul>
+
+<div>
+  Report lost item: <br>
+  <label>name </label>
+  <input #itemName />
+  <label>  date </label>
+  <input type="date" #itemDate />
+  <button (click)="add(itemName.value, itemDate.value); itemName.value=''">
+    Add
+  </button>
+</div>
