--- a/src/app/components/found-items.component.html
+++ b/src/app/components/found-items.component.html
@@ -1,10 +1,25 @@
+<br>
+<div>
+  Insert search criteria: <br>
+  <label>name </label>
+  <input #searchItemName />
+  <label>  date </label>
+  <input type="date" #searchItemDate />
+  <button (click)="getItemsBy(searchItemName.value, searchItemDate.value)">
+    Filter
+  </button>
+  <button (click)="ngOnInit(); searchItemName.value =''">
+    Reset
+  </button>
+</div>
+
 <h3>These are all found items</h3>
 
 <ul class="items">
     <li *ngFor="let item of items" [routerLink]="['/detail', item.id]">
         <span class="badge">{{item.id}}</span>
         <span>{{item.name}}</span>
-        <span>{{item.foundDate}}</span>
+        <span class="date">{{item.foundDate}}</span>
     </li>
 </ul>
 
