--- a/src/app/components/lost-items.component.html
+++ b/src/app/components/lost-items.component.html
@@ -14,13 +14,22 @@
 </div>
 
 <h3>These are all lost items</h3>
-<ul class="items">
-  <li *ngFor="let item of items" [routerLink]="['/detail', item.id]">
-    <span class="badge">{{item.id}}</span>
-    <span>{{item.name}}</span>
-    <span class="date">{{item.lostDate}}</span>
-  </li>
-</ul>
+<table class="table table-hover">
+  <thead>
+    <tr>
+      <th>#</th>
+      <th>name</th>
+      <th>date lost</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let item of items" [routerLink]="['/detail', item.id]">
+      <th scope=row>{{item.id}}</th>
+      <td>{{item.name}}</td>
+      <td>{{item.lostDate}}</td>
+    </tr>
+  </tbody>
+</table>
 
 <div>
   Report lost item: <br>
