Item addition now in modal

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <body>
-  <nav class="navbar navbar-inverse navbar-fixed-top">
+  <nav class="navbar navbar-inverse bg-primary fixed-top">
     <div class="container">
       <div class="navbar-header">
         <a class="navbar-brand" href="/">Lost'n'Found</a>
@@ -8,6 +8,7 @@
       </div>
     </div>
   </nav>
+<div class="jumbotron"></div>
   <div class="container">
     <router-outlet></router-outlet>
   </div>
