--- a/src/app/components/item-detail-modal.component.html
+++ b/src/app/components/item-detail-modal.component.html
@@ -9,8 +9,8 @@
     <div><label>id: </label> {{item.id}}</div>
     <div>
       <div> <label>name: </label>{{item.name}}</div>
-      <div *ngIf="item.lostDate"> <label>lost: </label>{{item.lostDate}}</div>
-      <div *ngIf="item.foundDate"> <label>found: </label>{{item.foundDate}}</div>
+      <div *ngIf="item.lostDate"> <label>lost: </label>{{item.lostDate| date:'yyyy-MM-dd'}}</div>
+      <div *ngIf="item.foundDate"> <label>found: </label>{{item.foundDate| date:'yyyy-MM-dd'}}</div>
     </div>
   </div>
   <div class="modal-footer">
