--- a/src/app/components/lost-items.component.html
+++ b/src/app/components/lost-items.component.html
@@ -17,7 +17,7 @@
     </form>
   </div>
   <div class="col-md-6">
-  <add-item-modal></add-item-modal>
+    <add-item-modal (itemRet)="addNewItem($event)"></add-item-modal>
   </div>
 </div>
 <br>
@@ -28,37 +28,21 @@
       <th>name</th>
       <th>date lost</th>
       <th></th>
+      <th></th>
     </tr>
   </thead>
   <tbody>
     <tr *ngFor="let item of items">
       <th scope=row>{{item.id}}</th>
       <td>{{item.name}}</td>
-      <td>     </td>
       <td>{{item.lostDate | date:'yyyy-MM-dd'}}</td>
       <td>
         <item-detail-modal [item]='item'></item-detail-modal>
+      </td>
+      <td>
         <button class="btn btn-warning" mwlConfirmationPopover [title]="'WARNING'" [message]="'Are you sure?'" placement="right"
           (confirm)="remove(item)"> Delete</button>
       </td>
     </tr>
   </tbody>
 </table>
-<div class="row">
-    <div class="col-md-6">
-  <form data-toggle="validator">
-    <h5> Report lost item: </h5>
-    <div class="form-group has-danger">
-      <label class="form-control-label" for="newName"> Name </label>
-      <input type="text" id="newName" #itemName class="form-control form-control-danger" required ng-reqired/>
-    </div>
-      <div class="form-group">
-        <label for="newDate">  date </label>
-        <input id="newDate" type="date" #itemDate class="form-control" required max="{{today | date:'yyyy-MM-dd'}}" />
-      </div>
-      <div>
-        <button type="submit" class="btn btn-default" (click)="add(itemName.value, itemDate.value)"> Add </button>
-      </div>
-      </form>
-  </div>
-</div>
