Toggle and collapse working

--- a/src/app/components/add-item-modal.component.html
+++ b/src/app/components/add-item-modal.component.html
@@ -24,4 +24,4 @@
 </div>
 </ng-template>
 
-<button class="btn btn-lg btn-outline-primary" (click)="open(content)">Add item MODAL</button>
+<button class="btn btn-lg btn-outline-primary" (click)="open(content)">Add new item</button>
