--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,50 @@
 <body>
-  <nav class="navbar navbar-inverse bg-primary fixed-top">
+
+  <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <div class="container">
       <div class="navbar-header">
-        <a class="navbar-brand" href="/">Lost'n'Found</a>
-        <a class="btn btn-primary btn-lg" routerLink="/lost" routerLinkActive="active">Lost Items</a>
-        <a class="btn btn-primary btn-lg" routerLink="/found" routerLinkActive="active">Found Items</a>
+        <a class="navbar-brand" href="/">{{title}}</a>
+      </div>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse"
+        aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarCollapse">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/lost" routerLinkActive="active">Lost Items</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/found" routerLinkActive="active">Found Items</a>
+          </li>
+        </ul>
       </div>
     </div>
   </nav>
-<div class="jumbotron"></div>
+
+
+  <!-- <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+    <a class="navbar-brand" href="/">Lost'n'Found</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse"
+      aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+    <div class="collapse navbar-collapse" id="navbarCollapse">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/lost" routerLinkActive="active">Lost Items</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/found" routerLinkActive="active">Found Items</a>
+        </li>
+      </ul>
+    </div>
+  </nav> -->
+
   <div class="container">
-    <router-outlet></router-outlet>
+    <div class="jumbotron" style="background-color: #FFFFFF">
+      <router-outlet></router-outlet>
+    </div>
   </div>
 
   <hr>
