--- a/src/app/components/add-item-modal.component.html
+++ b/src/app/components/add-item-modal.component.html
@@ -22,7 +22,7 @@
                     <div class="form-group">
                         <label for="itemSizes">Select item size</label>
                         <select class="form-control" id="itemSizes" name="itemSizes" [(ngModel)]="newItem.size">
-                  <option *ngFor="let size of sizes">{{size}}</option>
+                        <option *ngFor="let size of sizes" [value]="size">{{size}}</option>
                 </select>
                     </div>
                     <div class="form-group">
