Lowercase pipe added

--- a/src/app/components/lost-items.component.html
+++ b/src/app/components/lost-items.component.html
@@ -47,7 +47,7 @@
       <th scope=row>{{item.id}}</th>
       <td>{{item.name}}</td>
       <td>{{item.lostDate | date:'yyyy-MM-dd'}}</td>
-      <td>{{item.size}}</td>
+      <td>{{item.size | lowercase }}</td>
       <td>{{item.category}}</td>
       <td>{{item.creationDate | date:'yyyy-MM-dd hh:mm'}}</td>
       <td>
