--- a/src/app/components/item-detail-modal.component.html
+++ b/src/app/components/item-detail-modal.component.html
@@ -8,14 +8,21 @@
   <div class="modal-body">
     <div class="row">
       <div class="col-md-6">
-        <div><label>id: </label> {{item.id}}</div>
-        <div> <label>name: </label>{{item.name}}</div>
-        <div *ngIf="item.lostDate"> <label>lost: </label>{{item.lostDate| date:'yyyy-MM-dd'}}</div>
-        <div *ngIf="item.foundDate"> <label>found: </label>{{item.foundDate| date:'yyyy-MM-dd'}}</div>
+        <div><label>Id: </label> {{item.id}}</div>
+        <div> <label>Name: </label> {{item.name}}</div>
+        <div *ngIf="item.lostDate"> <label>Lost on: </label> {{item.lostDate| date:'yyyy-MM-dd'}}</div>
+        <div *ngIf="item.foundDate"> <label>Found on: </label> {{item.foundDate| date:'yyyy-MM-dd'}}</div>
+        <div> <label>Size: </label> {{item.size | lowercase }}</div>
+        <div> <label>Category: </label> {{item.category}}</div>
+        <div> <label>Material: </label> {{item.material}}</div>
+        <div> <label>Reported on: </label> {{item.creationDate | date:'yyyy-MM-dd hh:mm'}}</div>
       </div>
       <div class="col-md-6">
         <div> <img src={{item.photoURL}}> </div>
       </div>
+    </div>
+    <div class="row col-md-12">
+      <div> <label>Description: </label> {{item.description}}</div>
     </div>
   </div>
   <div class="modal-footer">
