Search done, sort icons added

--- a/src/app/components/add-item-modal.component.html
+++ b/src/app/components/add-item-modal.component.html
@@ -60,4 +60,4 @@
     </div>
 </ng-template>
 
-<button class="btn btn-lg btn-outline-primary" (click)="open(content)">Add new item</button>
+<button class="btn btn-lg btn-outline-primary" (click)="open(content)" style="width: 100%">Add new item</button>
