--- a/src/app/components/item-detail-modal.component.html
+++ b/src/app/components/item-detail-modal.component.html
@@ -13,11 +13,13 @@
         <div *ngIf="item.lostDate"> <label>Lost on: </label> {{item.lostDate| date:'yyyy-MM-dd'}}</div>
         <div *ngIf="item.foundDate"> <label>Found on: </label> {{item.foundDate| date:'yyyy-MM-dd'}}</div>
         <div> <label>Size: </label> {{item.size | lowercase }}</div>
+        <div> <label>Color: </label> {{item.color}}</div>
         <div> <label>Category: </label> {{item.category}}</div>
         <div> <label>Material: </label> {{item.material}}</div>
         <div> <label>Reported on: </label> {{item.creationDate | date:'yyyy-MM-dd hh:mm'}}</div>
       </div>
       <div class="col-md-6">
+        <br>
         <div> <img src={{item.photoURL}}> </div>
       </div>
     </div>
