--- a/src/app/components/lost-items.component.html
+++ b/src/app/components/lost-items.component.html
@@ -1,44 +1,86 @@
 <div class="row">
-  <div class="col-md-3">
-    <add-item-modal (itemRet)="addNewItem($event)"></add-item-modal>
+  <div class="col-md-6">
+    <add-item-modal (itemRet)="addNewItem($event)" ></add-item-modal>
   </div>
-  <div class="col-md-3">
+  <div class="col-md-6">
     <button class="btn btn-lg btn-outline-primary" data-toggle="collapse" data-target="#collapseSearchCriteria" aria-expanded="false"
-      aria-controls="collapseSearchCriteria">Search item</button>
+      aria-controls="collapseSearchCriteria" style="width: 100%">Search item</button>
   </div>
 </div>
-<div class="row">
-  <div class="col-md-9">
-    <div class="collapse" id="collapseSearchCriteria">
-      <form>
-        <br>
-        <h4> Insert search criteria </h4>
+<div class="collapse" id="collapseSearchCriteria" style="border-style: solid; border-width: 1px; border-top-left-radius: 20px;
+border-top-right-radius: 20px">
+  <br>
+  <h6>Insert search criteria: </h6>
+  <form #itemForm="ngForm" (ngSubmit)="getItemsBy()">
+    <div class="row">
+      <div class="col-md-6">
         <div class="form-group">
-          <label for="itemName">Item name:</label>
-          <input type="text" #searchItemName class="form-control" id="itemName" placeholder="Name">
+          <label class="form-control-label" for="newName"> Name </label>
+          <input type="text" name="newName" id="newName" [(ngModel)]="searchCriteria.nameLike" class="form-control" />
         </div>
         <div class="form-group">
-          <label for="dateLost">Date lost:</label>
-          <input type="date" #searchItemDate class="form-control" id="dateLost">
+          <label for="itemSizes">Select item size</label>
+          <select class="form-control" id="itemSizes" name="itemSizes" [(ngModel)]="searchCriteria.sizeIs">
+                  <option *ngFor="let size of sizes" [value]="size">{{size | lowercase}}</option>
+                </select>
         </div>
-        <div align=right>
-          <button type="submit" class="btn btn-default" (click)="getItemsBy(searchItemName.value, searchItemDate.value)">Submit</button>
-          <button type="submit" class="btn btn-default" (click)="ngOnInit()"> Reset</button>
+        <div class="form-group">
+          <label for="newDate">  Date lost from</label>
+          <input id="newDate" name="newLostDate" type="date" [(ngModel)]="searchCriteria.lostDateAfter" class="form-control" />
         </div>
-      </form>
+        <div class="form-group">
+          <label for="newDate">  Date reported from </label>
+          <input id="newDate" name="newLostDate" type="date" [(ngModel)]="searchCriteria.creationDateAfter" class="form-control" />
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="form-group">
+          <label class="form-control-label" for="color"> Color </label>
+          <input type="text" name="color" id="color" [(ngModel)]="searchCriteria.colorLike" class="form-control" />
+        </div>
+        <div class="form-group">
+          <label class="form-control-label" for="category"> Category </label>
+          <input type="text" name="category" id="category" [(ngModel)]="searchCriteria.categoryLike" class="form-control" />
+        </div>
+        <div class="form-group">
+          <label for="newDate">  Date lost to </label>
+          <input id="newDate" name="newLostDate" type="date" [(ngModel)]="searchCriteria.lostDateBefore" class="form-control" max="{{today | date:'yyyy-MM-dd'}}"
+          />
+        </div>
+        <div class="form-group">
+          <label for="newDate">  Date reported to </label>
+          <input id="newDate" name="newLostDate" type="date" [(ngModel)]="searchCriteria.creationDateBefore" class="form-control" max="{{today | date:'yyyy-MM-dd'}}"
+          />
+        </div>
+      </div>
     </div>
-  </div>
+      <div class="row form-group">
+          <div class="col-md-10">
+            </div>
+        <div class="col-md-2">
+            <button type="submit" class="btn btn-default">Submit</button>
+            <button type="button" class="btn btn-default" (click)="findAllLost()"> Reset</button>
+        </div>
+      </div>
+
+  </form>
 </div>
 <br>
 <table class="table table-hover">
   <thead>
     <tr>
-      <th>#<button class="sorting-btn" (click)='OrderByArray("id",1)'></button><button class="sorting-btn-desc" (click)='OrderByArray("id",-1)'></button></th>
-      <th>Name<button class="sorting-btn" (click)='OrderByArray("name",1)'></button><button class="sorting-btn-desc" (click)='OrderByArray("name",-1)'></button></th>
-      <th>Lost on<button class="sorting-btn" (click)='OrderByArray("dateLost",1)'></button><button class="sorting-btn-desc" (click)='OrderByArray("dateLost",-1)'></button></th>
-      <th>Size<button class="sorting-btn" (click)='OrderByArray("size",1)'></button><button class="sorting-btn-desc" (click)='OrderByArray("size",-1)'></button></th>
-      <th>Category<button class="sorting-btn" (click)='OrderByArray("category",1)'></button><button class="sorting-btn-desc" (click)='OrderByArray("category",-1)'></button></th>
-      <th>Reported on<button class="sorting-btn" (click)='OrderByArray("creationDate",1)'></button><button class="sorting-btn-desc" (click)='OrderByArray("creationDate",-1)'></button></th>
+      <th>#<i class="fa fa-sort-asc" aria-hidden="true" (click)='OrderByArray("id",1)'></i><i class="fa fa-sort-desc" aria-hidden="true"
+          (click)='OrderByArray("id",-1)'></i></th>
+      <th>Name<i class="fa fa-sort-asc" aria-hidden="true" (click)='OrderByArray("name",1)'></i><i class="fa fa-sort-desc" aria-hidden="true"
+          (click)='OrderByArray("name",-1)'></i></th>
+      <th>Lost on<i class="fa fa-sort-asc" aria-hidden="true" (click)='OrderByArray("dateLost",1)'></i><i class="fa fa-sort-desc"
+          aria-hidden="true" (click)='OrderByArray("dateLost",-1)'></i></th>
+      <th>Size<i class="fa fa-sort-asc" aria-hidden="true" (click)='OrderByArray("size",1)'></i><i class="fa fa-sort-desc" aria-hidden="true"
+          (click)='OrderByArray("size",-1)'></i></th>
+      <th>Category<i class="fa fa-sort-asc" aria-hidden="true" (click)='OrderByArray("category",1)'></i><i class="fa fa-sort-desc"
+          aria-hidden="true" (click)='OrderByArray("category",-1)'></i></th>
+      <th>Reported on<i class="fa fa-sort-asc" aria-hidden="true" (click)='OrderByArray("creationDate",1)'></i><i class="fa fa-sort-desc"
+          aria-hidden="true" (click)='OrderByArray("creationDate",-1)'></i></th>
       <th>Action</th>
     </tr>
   </thead>
