Welcome page and items found added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
   <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <div class="container">
       <div class="navbar-header">
-        <a class="navbar-brand" href="/">{{title}}</a>
+        <a class="navbar-brand" routerLink="/welcome" routerLinkActive="active">{{title}}</a>
       </div>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse"
         aria-expanded="false" aria-label="Toggle navigation">
