--- a/src/app/components/lost-items.component.html
+++ b/src/app/components/lost-items.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-md-6">
-    <add-item-modal (itemRet)="addNewItem($event)" ></add-item-modal>
+    <add-item-modal [isLost]="true" (itemRet)="addNewItem($event)" ></add-item-modal>
   </div>
   <div class="col-md-6">
     <button class="btn btn-lg btn-outline-primary" data-toggle="collapse" data-target="#collapseSearchCriteria" aria-expanded="false"
@@ -69,6 +69,7 @@ border-top-right-radius: 20px">
 <table class="table table-hover">
   <thead>
     <tr>
+      <th></th>
       <th>#<i class="fa fa-sort-asc" aria-hidden="true" (click)='OrderByArray("id",1)'></i><i class="fa fa-sort-desc" aria-hidden="true"
           (click)='OrderByArray("id",-1)'></i></th>
       <th>Name<i class="fa fa-sort-asc" aria-hidden="true" (click)='OrderByArray("name",1)'></i><i class="fa fa-sort-desc" aria-hidden="true"
@@ -86,6 +87,7 @@ border-top-right-radius: 20px">
   </thead>
   <tbody>
     <tr *ngFor="let item of items">
+      <td></td>
       <th scope=row>{{item.id}}</th>
       <td>{{item.name}}</td>
       <td>{{item.lostDate | date:'yyyy-MM-dd'}}</td>
