--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,6 +17,9 @@
           <li class="nav-item">
             <a class="nav-link" routerLink="/found" routerLinkActive="active">Found Items</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/user" routerLinkActive="active">Users</a>
+          </li>
         </ul>
       </div>
     </div>
