--- a/src/app/components/user.component.html
+++ b/src/app/components/user.component.html
@@ -70,7 +70,8 @@
         <td>{{u.firstName}}</td>
         <td>{{u.lastName}}</td>
         <td>
-          <!-- <item-detail-modal [item]='item'></item-detail-modal> -->
+          <button class="btn btn-primary" routerLink="/requests/{{u.id}}" routerLinkActive="active">Wishlist</button>
+          <edit-user-modal [newUser]="u" ></edit-user-modal>
           <button class="btn btn-warning" mwlConfirmationPopover [title]="'WARNING'" [message]="'Are you sure?'" placement="right"
             (confirm)="remove(u)"> Delete</button>
         </td>
